Migrate tests to JUnit 5